# PINNS

./: .gitignore  LICENCE.txt  README.md  pyproject.toml  setup.py
code /: boxplots.py  dataset.py  main.py  model.py  training_loop.py  utils.py
code /benchmarking/: benchmarking.ipynb  test.ipynb
code /src/: dataset.py  model.py  sweep.py  training_loop.py  utils.py
experiments/PINNS_roberston/: PINNS_robertson.ipynb  PINNS_robertson.py  PINNS_robertson_benchmark.ipynb
experiments/naive_1d_osc/: naive_oscillator.ipynb  naive_oscillator_benchmark.ipynb
experiments/naive_2d_osc/: naive_2d_osc.ipynb  naive_2d_osc_benchmark.ipynb  naive_2d_osc_benchmarl.ipynb  naive_2d_osc_sweep.py
experiments/naive_roberston/: naive_roberston_sweep.py  naive_robertson.ipynb  naive_robertson_benchmark.ipynb
experiments/naive_robertson_2/: naive_robertson_2.ipynb  naive_robertson_2_benchmark.ipynb  naive_robertson_2_sweep.py
notebooks/: naive_oscillator.ipynb  naive_oscillator_benchmark.ipynb
src/benchmark/: __init__.py  accuracy.py  semigroup.py  timing.py
src/data/: __init__.py  dataset.py  samplers.py
src/losses/: __init__.py  osc_loss.py  rob_loss.py
src/models/: __init__.py  log_deeponet.py  mlp.py
src/physics/: __init__.py  solver.py  systems.py
src/pilot/: __init__.py
src/pilot/benchmark/: semigroup.py  timing.py
src/training/: __init__.py  engine.py  trainer.py  utils.py
tests/: test.ipynb
weights/: bad_robertson.pth  best_1d_osc.pth  best_2d_osc.pth  best_model.pth  best_robertson.pth  best_robertson_3.pth  best_robertson_4.pth
(+15 files in other folders)
