[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name    = "pilot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies    = [
    "torch        == 2.8.0",
    "numpy        == 2.3.3",
    "scipy        == 1.16.2",
    "matplotlib   == 3.10.6",
    "scikit-learn == 1.7.2",
    "pyDOE3       == 1.4.0",
    "tqdm         == 4.67.1",
    "wandb        == 0.25.1",
    "sympy        == 1.14.0",
    "h5py         == 3.15.1",
    "pyyaml       == 6.0.3",
    "ipykernel"
]


authors = [
  {name = "Enric Pursals"},
]

readme  = "README.md"
license = "MIT"

[tool.hatch.build.targets.wheel]
packages = ["src/pilot"]

[project.urls]
Repository = "https://github.com/NikTimes/PILOT"

